🚀 v1.1.0 - RAG amélioré avec formatage professionnel
✨ Nouvelles fonctionnalités:
- Service RAG avec vraie recherche vectorielle
- Formatage professionnel style consultant (McKinsey/BCG)
- Templates structurés pour les 5 types d'analyses
- Interface Gradio moderne avec dashboard
- Scripts d'indexation des PDFs

🔧 Améliorations techniques:
- GPT-4o-mini avec 4000 tokens pour réponses complètes
- Gestion robuste des erreurs OpenAI
- Recherche vectorielle avec scores de pertinence
- Citations et références documentaires
- Multiple versions RAG (working, enhanced, final)

🐛 Corrections:
- Fix paramètres OpenAI (max_tokens vs max_completion_tokens)
- Ajout dépendance requests manquante
- Timeout indexation PDFs optimisé
- Dockerfile vector-service et rag-service mis à jour

📁 Structure:
- frontend-gradio/ - Interface utilisateur moderne
- scripts/ - Outils d'indexation et tests
- Versions multiples pour stabilité et tests

--- a/vector-service/Dockerfile
+++ b/vector-service/Dockerfile
@@ -6,6 +6,6 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 COPY . /app
 
 EXPOSE 8002
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
+CMD ["uvicorn", "app.fixed_main:app", "--host", "0.0.0.0", "--port", "8002"]
 
 
