--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - "8003:8003"
     depends_on:
       - vector-service
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8003 --reload
+    command: uvicorn app.rag_main:app --host 0.0.0.0 --port 8003
     # volumes:
       # - ./rag-service:/app
 
@@ -106,26 +106,22 @@ services:
     # volumes:
       # - ./status-service:/app
 
-  # frontend-nextjs:
-  #   build: ./frontend/nextjs
-  #   env_file: .env
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - gateway-api
-  #   # volumes:
-  #     # - ./frontend/nextjs:/app
-  #   command: sh -c "npm install && npm run dev"
-
-  # frontend-streamlit:
-  #   build: ./frontend/streamlit
-  #   env_file: .env
-  #   ports:
-  #     - "8501:8501"
-  #   depends_on:
-  #     - gateway-api
-  #   # volumes:
-  #     # - ./frontend/streamlit:/app
+  frontend-gradio:
+    build: ./frontend-gradio
+    env_file: .env
+    ports:
+      - "7860:7860"
+    depends_on:
+      - gateway-api
+    environment:
+      - GATEWAY_URL=http://gateway-api:8000
+    volumes:
+      - ./data:/app/data:ro
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7860"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   postgres_data:
