--- a/rag-service/Dockerfile
+++ b/rag-service/Dockerfile
@@ -6,6 +6,6 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 COPY . /app
 
 EXPOSE 8003
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8003"]
+CMD ["uvicorn", "app.working_main:app", "--host", "0.0.0.0", "--port", "8003"]
 
 
