--- a/rag-service/requirements.txt
+++ b/rag-service/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.112.2
 uvicorn[standard]==0.30.6
 httpx==0.27.2
-openai==1.40.6
+openai==1.30.5
 pydantic==2.9.2
 python-dotenv==1.0.1
 loguru==0.7.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
+requests==2.32.3
 
 
