--- a/frontend-openwebui/package.json
+++ b/frontend-openwebui/package.json
@@ -23,6 +23,7 @@
     "clsx": "2.0.0",
     "class-variance-authority": "0.7.0",
     "react-markdown": "9.0.1",
+    "remark-gfm": "4.0.0",
     "react-syntax-highlighter": "15.5.0",
     "react-hot-toast": "2.4.1",
     "zustand": "4.4.7",
