feat: Migration complète vers Perplexity AI avec citations APA style app Perplexity
- Remplacement de l'API GPT par Perplexity AI (modèle 'sonar')
- Configuration de tous les services en mode perplexity_web_only
- Backend et RAG utilisent uniquement Perplexity (pas de RAG interne)
- Ajout citations systématiques format APA avec URLs cliquables
- Chat, streaming et analyses avec bibliographie complète
- Instructions de citation intégrées dans tous les prompts
- Format identique à l'application Perplexity

Services modifiés:
- backend-service: Prompts avec citations APA, mode web_only
- rag-service: Perplexity uniquement, pas de vector search interne
- env.example: Variables PERPLEXITY_API_KEY et PERPLEXITY_MODEL

Documentation ajoutée:
- CONFIGURATION_CITATIONS_PERPLEXITY.md: Guide complet des citations
- PERPLEXITY_MIGRATION.md: Documentation de migration détaillée
- SETUP_COMPLET.md: Guide de configuration complet
- QUICKSTART_PERPLEXITY.md: Démarrage rapide
- Et 5 autres docs de référence

Version: 3.0-perplexity-citations-apa

--- a/env.example
+++ b/env.example
@@ -9,10 +9,13 @@
 COMPOSE_PROJECT_NAME=insight_mvp
 
 # =============================================================================
-# OPENAI CONFIGURATION (Required for AI analysis)
+# PERPLEXITY AI CONFIGURATION (Required for AI analysis with web search)
 # =============================================================================
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# Get your API key from: https://www.perplexity.ai/settings/api
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+
+# Perplexity model (options: llama-3.1-sonar-large-128k-online, llama-3.1-sonar-small-128k-online)
+PERPLEXITY_MODEL=llama-3.1-sonar-large-128k-online
 
 # =============================================================================
 # POSTGRES DATABASE CONFIGURATION
