feat: Rapports PDF professionnels avec filigrane style Veille Stratégique
- Amélioration complète du report-service pour format professionnel
- Ajout d'un filigrane avec opacité 10% sur toutes les pages PDF
- Page de couverture style corporate avec bandeau bleu
- En-têtes et pieds de page automatiques avec pagination
- Styles professionnels (typographie, couleurs, espacements)
- Support complet du Markdown (##, ###, listes, citations)
- Citations APA formatées avec URLs cliquables
- Section sources dédiée en fin de rapport

Fichiers ajoutés:
- filigrane/Copie de Ebook Veille automatisée.png (filigrane)
- templates/ (2 PDFs de référence ACANS EURO GROUP)
- RAPPORTS_PROFESSIONNELS_FILIGRANE.md (documentation complète)

Modifications techniques:
- report-service/app/main.py:
  • Nouvelles fonctions: _add_watermark(), _add_header_footer()
  • Styles professionnels améliorés (couleurs #0052A5, typographie)
  • Parser Markdown amélioré pour sections hiérarchisées
  • Support images avec Pillow pour filigrane

- report-service/Dockerfile:
  • Contexte build à la racine du projet
  • Copie des dossiers filigrane/ et templates/

- report-service/requirements.txt:
  • Ajout Pillow==10.4.0 pour manipulation d'images

- docker-compose.yml:
  • Mise à jour du build context pour report-service

Format des rapports:
- Format A4, marges professionnelles (2cm)
- Palette corporate: Bleu #0052A5, Gris #333333
- Typographie Helvetica (10-26pt selon sections)
- Filigrane centré, opacité 10% pour lisibilité
- Structure: Couverture → Contenu → Sources → Métadonnées

Version: 1.0-professional-reports-watermark

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,9 @@ services:
     command: uvicorn app.rag_main:app --host 0.0.0.0 --port 8003
 
   report-service:
-    build: ./report-service
+    build:
+      context: .
+      dockerfile: ./report-service/Dockerfile
     env_file: .env
     ports:
       - "8004:8004"
@@ -78,7 +80,7 @@ services:
       - postgres
     networks:
       - insight-network
-    command: uvicorn app.enhanced_main:app --host 0.0.0.0 --port 8004 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8004 --reload
     volumes:
       - ./data:/app/data:ro
 
