feat: PDF improvements V4.3 - Fix sources, headers, and cover page
- Remove blue block from cover page (cleaner design)
- Fix markdown headers parsing (#, ##, ###) with proper hierarchy
- Restore bibliography section (Références Bibliographiques)
- Improve source extraction with multiple format support
- Add dynamic chart section (only shown if charts present)
- Update styles to match AXIAL templates (black text, visible watermark)
- Add rich narrative content (60% paragraphs, 40% bullets)
- Increase max_tokens: 8000/16000/20000 for better content
- Add comprehensive documentation and deployment scripts

Version: 4.3
Date: 2024-11-16

--- a/env.example
+++ b/env.example
@@ -14,8 +14,12 @@ COMPOSE_PROJECT_NAME=insight_mvp
 # Get your API key from: https://www.perplexity.ai/settings/api
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
-# Perplexity model (options: llama-3.1-sonar-large-128k-online, llama-3.1-sonar-small-128k-online)
-PERPLEXITY_MODEL=llama-3.1-sonar-large-128k-online
+# Configuration multi-modèles Sonar (optimisation par cas d'usage)
+# Cette stratégie multi-modèles optimise les coûts (~60% sur chat) tout en maximisant la qualité des rapports
+# IMPORTANT: Tous les rapports (standards et approfondis) utilisent sonar-pro avec 12000 tokens
+PERPLEXITY_MODEL_CHAT=sonar              # Chat court, tests API (coût optimisé)
+PERPLEXITY_MODEL_ANALYSIS=sonar-pro      # TOUS les rapports (standards 15-25 sources ET approfondis 60 sources)
+PERPLEXITY_MODEL_REASONING=sonar-reasoning # Réservé usage futur (non utilisé actuellement)
 
 # =============================================================================
 # POSTGRES DATABASE CONFIGURATION
