--- a/backend-service/Dockerfile
+++ b/backend-service/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 EXPOSE 8006
-CMD ["uvicorn", "app.fixed_main:app", "--host", "0.0.0.0", "--port", "8006"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8006"]
