--- a/env.example
+++ b/env.example
@@ -19,7 +19,7 @@ PERPLEXITY_API_KEY=your_perplexity_api_key_here
 # IMPORTANT: Tous les rapports (standards et approfondis) utilisent sonar-pro avec 12000 tokens
 PERPLEXITY_MODEL_CHAT=sonar              # Chat court, tests API (coût optimisé)
 PERPLEXITY_MODEL_ANALYSIS=sonar-pro      # TOUS les rapports (standards 15-25 sources ET approfondis 60 sources)
-PERPLEXITY_MODEL_REASONING=sonar-reasoning # Réservé usage futur (non utilisé actuellement)
+PERPLEXITY_MODEL_REASONING=sonar-reasoning-pro # Réservé usage futur (non utilisé actuellement) - Migration depuis sonar-reasoning (déprécié le 15/12/2025)
 
 # =============================================================================
 # POSTGRES DATABASE CONFIGURATION
@@ -47,6 +47,18 @@ VECTOR_URL=http://vector-service:8002
 RAG_URL=http://rag-service:8003
 REPORT_URL=http://report-service:8004
 STATUS_URL=http://status-service:8005
+SCHEDULER_URL=http://scheduler-service:8007
+
+# =============================================================================
+# EMAIL CONFIGURATION (SMTP for automated watches)
+# =============================================================================
+# Required for sending automated watch reports via email
+# For Gmail: use App Password (https://myaccount.google.com/apppasswords)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password_here
+SMTP_FROM=noreply@your-company.com
 
 # =============================================================================
 # BRANDING AND ASSETS
