--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:16
     environment:
       POSTGRES_DB: insight_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: insight_user
+      POSTGRES_PASSWORD: insight_password_2024
     ports:
       - "5432:5432"
     volumes:
@@ -151,13 +151,15 @@ services:
     build:
       context: ./frontend-openwebui
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+        - NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-http://localhost:8006}
+        - NEXT_PUBLIC_SCHEDULER_URL=${NEXT_PUBLIC_SCHEDULER_URL:-http://localhost:8007}
+        - NEXT_PUBLIC_REPORT_URL=${NEXT_PUBLIC_REPORT_URL:-http://localhost:8004}
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://localhost:8000
-      - NEXT_PUBLIC_BACKEND_URL=http://localhost:8006
-      - NEXT_PUBLIC_SCHEDULER_URL=http://localhost:8007
     depends_on:
       - gateway-api
       - backend-service
